Instead of simply 'cooking' certain liquids (such as sap > syrup or water > salt) , they are now actual simmer recipes 
Soy milk can be used to make tofu
Salad dressing added (vinegar + egg white + oil)
Cheese bread added (cheese is part of dough-making process)


CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....

1.7.0
Ancient Tools maple/spruce compatibility added
Ancient Tools now has part-baked and charred food
Ancient Tools meat can be smashed with the Acorns mallet
Cooked food can be chopped up - DONE!!!
Primitive Survival salmon & vanilla fish usable for fish sauce
Primitive Survival cooked crabnugget nutrition buffed - DONE!!!
Part-cooked chopped food can be used to make broth
Pitch glue recipe fixed	
Cheese buffed to have NutritionPropsWhenInMeal
Soy milk can be used to make cheese
Soy milk can be added to same meals as normal milk

1.6.8

Added fruit bars - nuts + fruit + syrup
Actually added Wildcraft Trees section in handbook
Various log warnings fixed
Wildcraft fine wine can be distilled into wildcraft brandy
Wildcraft/Wildcraft Trees brandies renamed properly
Gozinaki/trail mix recipes only need 2 handfuls of acorns, not 3
Soulstorm brew has correct text in bottles
Ukranian translation updated (thanks to _epic_fish_ and .olexn)
Polish translation updated (thanks to Sako47)
Many foods can be placed on display case / shelves
Salt production refined (thanks to Goose's Salternate mod)

1.6.7

Updated to NET 7.0
Wildcraft Trees compatibility finally added
Wildcraft compatibility updated
Salt works in meals again
Non-chopped meat works in porridge
New gelatin textures
Chopped food can be used for broth
Aged meat can be used for broth
PS broth recipes require 1 item instead of 2
Lard harden time reduced to 1/4th previous values; corrected harden transition numbers
Soulstorm Brew buffed from +10 HP per liter to +100 HP per liter :^)
Wildcraft nutrition in pemmican corrected
Fish nugget soup text fixed