@@ -41,9 +41,10 @@ CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....
 
 1.7.0
 Ancient Tools maple/spruce compatibility added
-Ancient Tools now has part-baked and charred food
+Ancient Tools salted meat can be hung on meathooks, baked, put in pies, has part-baked & charred variants
 Ancient Tools meat can be smashed with the Acorns mallet
 Cooked food can be chopped up - DONE!!!
+Partially cooked & cooked meat can be charred in the firepit
 Primitive Survival salmon & vanilla fish usable for fish sauce
 Primitive Survival cooked crabnugget nutrition buffed - DONE!!!
 Part-cooked chopped food can be used to make broth
@@ -51,6 +52,7 @@ Pitch glue recipe fixed
 Cheese buffed to have NutritionPropsWhenInMeal
 Soy milk can be used to make cheese
 Soy milk can be added to same meals as normal milk
+GroundStack property used internally instead of GrindedStack 
 
 1.6.8
 
